# mcp-research-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_research_pipeline/: __init__.py  __main__.py  config.py  server.py
src/mcp_research_pipeline/clients/: notebooklm.py  transcript_api.py  youtube_transcript.py
src/mcp_research_pipeline/tools/: artifacts.py  notebook.py  pipeline.py  youtube.py
src/mcp_research_pipeline/utils/: errors.py  youtube_url.py
tests/: test_artifact_tools.py  test_notebook_tools.py  test_url_parsing.py  test_youtube_tools.py
