[project]
name = "mcp-research-pipeline"
version = "0.1.0"
description = "MCP server unifying YouTube transcripts, search, and NotebookLM into a research pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Rubayat Khan"}]
keywords = ["mcp", "youtube", "notebooklm", "research", "transcripts"]

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27,<1.0",
    "youtube-transcript-api>=1.0,<2.0",
    "notebooklm-py>=0.3.2,<0.4",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
mcp-research-pipeline = "mcp_research_pipeline.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_research_pipeline"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
